--- a/grails/cors/跨域配置.md
+++ b/grails/cors/跨域配置.md
@@ -17,3 +17,11 @@ beans = {
     }
 }
 ```
+
+grails3.2.1+版本可以直接配置
+```
+grails:
+    cors:
+        enabled: true
+```
+参考：[grails文档](http://docs.grails.org/latest/guide/single.html#cors)
