--- a/grails/iterceptor and filter/过滤器与拦截器.md
+++ b/grails/iterceptor and filter/过滤器与拦截器.md
@@ -19,6 +19,12 @@ import com.filter.JsoupUtils
 */
 class XssInterceptor {
 
+  //配置拦截器优先级，默认为0，可以通过HIGHEST_PRECEDENCE或LOWEST_PRECEDENCE来指定优先级
+  int order = HIGHEST_PRECEDENCE + 50
+
+  // or
+  //int order = LOWEST_PRECEDENCE - 50
+
   XssInterceptor() {
       matchAll()
     //match(controller: "*",action: "*").except(action: "login")
