--- a/grails/cors/跨域配置.md
+++ b/grails/cors/跨域配置.md
@@ -24,4 +24,16 @@ grails:
     cors:
         enabled: true
 ```
+
+页面ajax携带携带token:
+```
+$.ajax("https://api.notmyserver.com/rest/stuff/123", {
+    data: data,
+    dataType: 'json',
+    type: 'get',
+    success: callback,
+    headers: {Authorization: "Basic ..."}
+});
+```
+
 参考：[grails文档](http://docs.grails.org/latest/guide/single.html#cors)
