--- a/grails/cors/跨域配置.md
+++ b/grails/cors/跨域配置.md
@@ -25,6 +25,43 @@ grails:
         enabled: true
 ```
 
+# Grails 3+
+
+在src/main/java下创建一个servlet过滤器
+```
+@Priority(Integer.MIN_VALUE)
+public class CorsFilter extends OncePerRequestFilter {
+
+    public CorsFilter() { }
+
+    @Override
+    protected void doFilterInternal(HttpServletRequest req, HttpServletResponse resp, FilterChain chain)
+            throws ServletException, IOException {
+
+        String origin = req.getHeader("Origin");
+
+        boolean options = "OPTIONS".equals(req.getMethod());
+        if (options) {
+            if (origin == null) return;
+            resp.addHeader("Access-Control-Allow-Headers", "origin, authorization, accept, content-type, x-requested-with");
+            resp.addHeader("Access-Control-Allow-Methods", "GET, HEAD, POST, PUT, DELETE, TRACE, OPTIONS");
+            resp.addHeader("Access-Control-Max-Age", "3600");
+        }
+
+        resp.addHeader("Access-Control-Allow-Origin", origin == null ? "*" : origin);
+        resp.addHeader("Access-Control-Allow-Credentials", "true");
+
+        if (!options) chain.doFilter(req, resp);
+    }
+}
+```
+然后在grails-app/conf/spring/resources.groovy中注册：
+```
+beans = {
+    corsFilter(CorsFilter)
+}
+```
+
 页面ajax携带携带token:
 ```
 $.ajax("https://api.notmyserver.com/rest/stuff/123", {
