--- a/grails/email/发送邮件功能.md
+++ b/grails/email/发送邮件功能.md
@@ -288,3 +288,6 @@ template页面：
 </body>
 </html>
 ```
+### 总结：
+若邮件发送出错，可能是jdk问题，首先下载文件并解压：[下载地址](http://www.oracle.com/technetwork/java/javase/downloads/jce-7-download-432124.html)
+将%JAVA_HOME%\jre\lib\security的包替换掉
