--- a/grails/email/发送邮件功能.md
+++ b/grails/email/发送邮件功能.md
@@ -1,6 +1,7 @@
 新建项目，在build.gradle中引入email依赖：
 ```
 compile 'org.grails.plugins:mail:2.0.0.RC6'
+//or compile 'org.grails.plugins:mail:2.0.0'
 ```
 在grails-app/conf/application.yml最后面加入邮件配置：
 ```
