--- a/grails/unit test/单元测试一.md
+++ b/grails/unit test/单元测试一.md
@@ -52,3 +52,15 @@ class PayControllerSpec extends Specification {
 }
 
 ```
+>> 若上述调用的控制器中有用到UserInfo或则上述测试类中用到了UserInfo而没有加@Mock(UserInfo)，则会报错
+```
+java.lang.IllegalStateException: Either class [com.system.UserInfo] is not a domain class or GORM has not been initialized correctly or has already been shutdown. If you are unit testing your entities using the mocking APIs
+
+	at org.grails.datastore.gorm.GormEnhancer.stateException(GormEnhancer.groovy:159)
+	at org.grails.datastore.gorm.GormEnhancer.findStaticApi(GormEnhancer.groovy:153)
+	at org.grails.datastore.gorm.GormEntity$Trait$Helper.currentGormStaticApi(GormEntity.groovy:1315)
+	at org.grails.datastore.gorm.GormEntity$Trait$Helper.findAll(GormEntity.groovy:648)
+	at org.grails.datastore.gorm.GormEntity$Trait$Helper.findAll(GormEntity.groovy:647)
+	at com.pay.PayController.index(PayController.groovy:12)
+	at com.pay.PayControllerSpec.custom(PayControllerSpec.groovy:30)
+```
