--- a/grails/unit test/单元测试一.md
+++ b/grails/unit test/单元测试一.md
@@ -52,7 +52,7 @@ class PayControllerSpec extends Specification {
 }
 
 ```
->> 若上述调用的控制器中有用到UserInfo或则上述测试类中用到了UserInfo而没有加@Mock(UserInfo)，则会报错
+> 若上述调用的控制器中有用到UserInfo或则上述测试类中用到了UserInfo而没有加@Mock(UserInfo)，则会报错
 ```
 java.lang.IllegalStateException: Either class [com.system.UserInfo] is not a domain class or GORM has not been initialized correctly or has already been shutdown. If you are unit testing your entities using the mocking APIs
 
