--- a/grails/unit test/单元测试一.md
+++ b/grails/unit test/单元测试一.md
@@ -64,3 +64,4 @@ java.lang.IllegalStateException: Either class [com.system.UserInfo] is not a dom
 	at com.pay.PayController.index(PayController.groovy:12)
 	at com.pay.PayControllerSpec.custom(PayControllerSpec.groovy:30)
 ```
+**@Mock的作用为引入关联类，个人感觉像桥梁一样
