--- a/groovy/枚举类用法.md
+++ b/groovy/枚举类用法.md
@@ -26,13 +26,14 @@ enum FileStatus {
 > 使用说明
 ```
 //同时获取键值
-com.management.common.FileStatus.collect{[name:it.name,value:it.value]}
+FileStatus.collect{[name:it.name,value:it.value]}
 
 //字符转枚举对象
-FileStatus.valueOf(value)
+def fs = FileStatus.valueOf(value)
+fs.name
+fs.value
 
 //值集合
 FileStatus.values().toList()
-
 
 ```
