--- a/grails/fileupload/上传文件映射到绝对路径.md
+++ b/grails/fileupload/上传文件映射到绝对路径.md
@@ -1,6 +1,11 @@
 > 当文件上传到服务器上面且非tomcat容器下面后，如何访问呢
 比如访问：http://127.0.0.1:8080/upload/2018/9/18/1.jpg时，我想访问d:/fupload/2018/9/18/1.jpg这个文件
 
+> 作用效果等价于
+```
+<mvc:resources mapping="/js/**" location="/js/"/>
+```
+
 > 需要通过适配器来映射
 ```
 //在src/main/java下面新建一个类
