--- a/grails/database/数据库迁移.md
+++ b/grails/database/数据库迁移.md
@@ -1,7 +1,7 @@
 ## 数据库迁移插件官方提供有2种
 
-  -- [grails-flyway](http://plugins.grails.org/plugin/saw303/org.grails.plugins%3Agrails-flyway)
-  -- [database-migration](http://plugins.grails.org/plugin/grails/database-migration)
+  1. [grails-flyway](http://plugins.grails.org/plugin/saw303/org.grails.plugins%3Agrails-flyway)
+  2. [database-migration](http://plugins.grails.org/plugin/grails/database-migration)
   
 ## 项目参考：Grails Database Migration Plugin
 
