--- a/grails/controller/命名空间.md
+++ b/grails/controller/命名空间.md
@@ -14,3 +14,88 @@
 ```
 
 > 加了命名空间，views也需要放到
+
+
+#### 加了命名空间权限如何使用
+
+* 控制器
+
+```
+@Secured(['ROLE_ADMIN'])
+class TestController {
+    static namespace = 'config'
+
+    def index() {
+        render view: "index"
+    }
+}
+```
+
+* urlMapping
+
+```
+"/$controller/$action?/$id?(.$format)?" {
+    constraints {
+    }
+}
+
+"/config/$controller/$action?/$id?(.$format)?" {
+    constraints {
+    }
+}
+```
+
+* application.yml
+
+```
+grails:
+  plugin:
+    springsecurity:
+      debug:
+        useFilter: true
+      rejectIfNoRule: false
+      fii:
+        rejectPublicInvocations: true
+      userLookup:
+        userDomainClassName: 'com.test.User'
+        usernamePropertyName: 'username'
+        authorityJoinClassName: 'com.test.UserRole'
+      authority:
+        className: 'com.test.Role'
+      logout:
+        postOnly: false
+      controllerAnnotations:
+        staticRules:
+          - pattern: '/error'
+            access: 'permitAll'
+          - pattern: '/assets/**'
+            access: 'permitAll'
+          - pattern: '/**/js/**'
+            access: 'permitAll'
+          - pattern: '/**/css/**'
+            access: 'permitAll'
+          - pattern: '/**/images/**'
+            access: 'permitAll'
+          - pattern: '/**/favicon.ico'
+            access: 'permitAll'
+          - pattern: '/**'
+            access: 'isFullyAuthenticated()'
+```
+I've also tried adding
+
+    - pattern: '/config/**'
+      access: 'ROLE_ADMIN'
+            
+with v3.0.0.M1, only staticRules are in different format:
+
+      staticRules:
+          /error:           ['permitAll']
+          /login:           ['permitAll']
+          /logout:          ['permitAll']
+          /assets/**:       ['permitAll']
+          /**/js/**:        ['permitAll']
+          /**/css/**:       ['permitAll']
+          /**/images/**:    ['permitAll']
+                    /**/favicon.ico:  ['permitAll']
+                    /**:              ['IS_AUTHENTICATED_FULLY']
+```
