--- a/js/获取多个下拉框选中的值.md
+++ b/js/获取多个下拉框选中的值.md
@@ -1,6 +1,6 @@
 ## HTML
 
-```
+```html
 <select>
     <option selected>1</option>
     <option>2</option>
@@ -20,7 +20,7 @@
 
 ## JS
 
-```
+```javascript
 <script>
     var elems=document.querySelectorAll("select");
     elems.forEach(function(elem){
@@ -31,7 +31,7 @@
 
 ## ES6
 
-```
+```javascript
 let value = [...document.querySelectorAll("select")].map(item => {return item.value});
 console.log(value);
 ```
