--- a/mysql/模糊匹配开头和结尾.md
+++ b/mysql/模糊匹配开头和结尾.md
@@ -1,6 +1,6 @@
 ## 表
 
-```
+```sql
 CREATE TABLE `test`  (
   `id` int(11) NOT NULL AUTO_INCREMENT,
   `addr` varchar(255) CHARACTER SET utf8 COLLATE utf8_general_ci NULL DEFAULT NULL,
@@ -17,7 +17,7 @@ INSERT INTO `test` VALUES (3, '京包ccc下线');
 
 ## sql语句
 
-```
+```sql
 SELECT
 	SUM( CASE WHEN LEFT ( `addr`, 2 ) = '京包' AND RIGHT ( `addr`, 2 ) = '下线' THEN 1 ELSE 0 END ) 
 FROM
