--- a/groovy/枚举类用法.md
+++ b/groovy/枚举类用法.md
@@ -1,5 +1,5 @@
 > 定义枚举类
-```
+```groovy
 enum FileStatus {
 
     qr("已迁入","qr"),
@@ -24,7 +24,7 @@ enum FileStatus {
 }
 ```
 > 使用说明
-```
+```groovy
 //同时获取键值
 FileStatus.collect{[name:it.name,value:it.value]}
 
