--- a/java/类加载顺序.md
+++ b/java/类加载顺序.md
@@ -1,7 +1,7 @@
 > 静态代码块>构造代码块>构造函数>普通代码块　
 ### 静态代码块和构造代码块
 
-```
+```java
 public class CodeBlock {
     static{
         System.out.println("静态代码块");
@@ -21,7 +21,7 @@ public class CodeBlock {
 
 > 编译后代码
 
-```
+```java
 public class CodeBlock {
          
     public CodeBlock(){
