--- a/grails/cors/跨域各版本配置.md
+++ b/grails/cors/跨域各版本配置.md
@@ -1,9 +1,9 @@
 ### 如何跨域？
 #### 看版本
-    + Grails 3.2及以上版本
-    + Grails 3.2及以下
+    + `Grails 3.2`及以上版本
+    + `Grails 3.2`及以下
 
-1、Grails 3.2及以上，集成了跨域配置，只需在grails/conf/application.yml中添加如下配置
+1、`Grails 3.2`及以上，集成了跨域配置，只需在`grails/conf/application.yml`中添加如下配置
 
 
 ```yaml
@@ -13,7 +13,7 @@ grails:
 ```
 * [参考地址](http://docs.grails.org/snapshot/guide/single.html#cors)
 
-2、Grails 3.2及以下，需要通过filter来实现，在src/main/java下面创建Filter
+2、`Grails 3.2`及以下，需要通过`filter`来实现，在`src/main/java`下面创建`Filter`
 
 
 ```java
@@ -43,9 +43,9 @@ public class CorsFilter extends OncePerRequestFilter {
     }
 }
 ```
-* 接下来在grails-app/conf/resources.groovy中注入
+* 接下来在`grails-app/conf/resources.groovy`中注入
 
-```
+```groovy
 beans = {
     corsFilter(CorsFilter)
 }
