--- a/grails/cors/跨域各版本配置.md
+++ b/grails/cors/跨域各版本配置.md
@@ -3,7 +3,7 @@
     + Grails 3.2及以上版本
     + Grails 3.2`及以下
 
-1、`Grails 3.2及以上，集成了跨域配置，只需在`grails/conf/application.yml`中添加如下配置
+1、`Grails 3.2`及以上，集成了跨域配置，只需在`grails/conf/application.yml`中添加如下配置
 
 
 ```yaml
