--- a/grails/database/数据库迁移.md
+++ b/grails/database/数据库迁移.md
@@ -10,7 +10,7 @@
 
 * 在build.gradle中引入
 
-```
+```groovy
 buildscript {
     ext {
         grailsVersion = project.grailsVersion
@@ -49,7 +49,8 @@ sourceSets {
 ```
 
 ### 常用命令：
-```
+
+```bash
 //创建groovy配置文件，也可以创建xml格式的配置
 dbm-create-changelog changelog.groovy 
 
@@ -68,7 +69,7 @@ dbm-update
 
 * application.yml配置需要注意把dbCreate:none
 
-```
+```yaml
 ---
 hibernate:
     cache:
@@ -196,7 +197,7 @@ endpoints:
 
 * 此外如果需要配置自动建表，可在grails-app/conf先创建application.groovy，添加配置
 
-```
+```groovy
 //每次启动项目自动更新，比如你创建了一个domain，等再次启动的时候会在数据库创建表
 grails.plugin.databasemigration.updateOnStart = true
 //指定changelog.groovy文件
