--- a/grails/batch/批量保存.md
+++ b/grails/batch/批量保存.md
@@ -1,5 +1,6 @@
 测试数据库为mysql，grails-3.1.5，hibernate4，执行效率为1W/8秒左右。
-```
+
+```groovy
 package com.system
 
 import grails.transaction.Transactional
@@ -41,7 +42,8 @@ class TestController {
 ```
 
 sql batch，原生sql执行效率显而易见
-```
+
+```groovy
 class TestController {
 
     def dataSource
