--- a/grails/controller/命名空间.md
+++ b/grails/controller/命名空间.md
@@ -1,7 +1,8 @@
 #### 如何给控制器加namespace命名空间
 
   - 在controller中加入命名空间
-  ```
+  
+  ```groovy
   static namespace = "api"
   ```
 
@@ -9,7 +10,7 @@
 
 * 还需要在urlMapping中添加一个
 
-```
+```groovy
 "/$namespace/$controller/$action?/$id?(.$format)?"()
 ```
 
@@ -20,7 +21,7 @@
 
 * 控制器
 
-```
+```groovy
 @Secured(['ROLE_ADMIN'])
 class TestController {
     static namespace = 'config'
@@ -33,7 +34,7 @@ class TestController {
 
 * urlMapping
 
-```
+```groovy
 "/$controller/$action?/$id?(.$format)?" {
     constraints {
     }
@@ -47,7 +48,7 @@ class TestController {
 
 * application.yml
 
-```
+```yaml
 grails:
   plugin:
     springsecurity:
