--- a/grails/controller/命名空间.md
+++ b/grails/controller/命名空间.md
@@ -84,19 +84,23 @@ grails:
 ```
 I've also tried adding
 
-    - pattern: '/config/**'
-      access: 'ROLE_ADMIN'
+```yaml
+- pattern: '/config/**'
+  access: 'ROLE_ADMIN'
+```
             
 with v3.0.0.M1, only staticRules are in different format:
 
-      staticRules:
-          /error:           ['permitAll']
-          /login:           ['permitAll']
-          /logout:          ['permitAll']
-          /assets/**:       ['permitAll']
-          /**/js/**:        ['permitAll']
-          /**/css/**:       ['permitAll']
-          /**/images/**:    ['permitAll']
-                    /**/favicon.ico:  ['permitAll']
-                    /**:              ['IS_AUTHENTICATED_FULLY']
+```yaml
+staticRules:
+    /error:           ['permitAll']
+    /login:           ['permitAll']
+    /logout:          ['permitAll']
+    /assets/**:       ['permitAll']
+    /**/js/**:        ['permitAll']
+    /**/css/**:       ['permitAll']
+    /**/images/**:    ['permitAll']
+              /**/favicon.ico:  ['permitAll']
+              /**:              ['IS_AUTHENTICATED_FULLY']
+                    
 ```
