--- a/grails/cors/跨域配置.md
+++ b/grails/cors/跨域配置.md
@@ -1,9 +1,12 @@
 2、在build.gradle中引入跨域插件并刷新gradle
-```
+
+```java
 compile "org.grails.plugins:grails3-cors-interceptor:1.2.1"
 ```
+
 3、在grails-app/conf/spring/resources.groovy的beans中注入filter
-```
+
+```groovy
 import org.springframework.boot.context.embedded.FilterRegistrationBean
 import grails3.cors.interceptor.SpringSecurityCorsFilter
 
@@ -19,7 +22,7 @@ beans = {
 ```
 
 grails3.2.1+版本可以直接配置
-```
+```yaml
 grails:
     cors:
         enabled: true
@@ -28,7 +31,7 @@ grails:
 # Grails 3+
 
 在src/main/java下创建一个servlet过滤器
-```
+```groovy
 @Priority(Integer.MIN_VALUE)
 public class CorsFilter extends OncePerRequestFilter {
 
@@ -55,15 +58,18 @@ public class CorsFilter extends OncePerRequestFilter {
     }
 }
 ```
+
 然后在grails-app/conf/spring/resources.groovy中注册：
-```
+
+```groovy
 beans = {
     corsFilter(CorsFilter)
 }
 ```
 
 页面ajax携带携带token:
-```
+
+```javascript
 $.ajax("https://api.notmyserver.com/rest/stuff/123", {
     data: data,
     dataType: 'json',
