--- a/grails/fileupload/上传文件映射到绝对路径.md
+++ b/grails/fileupload/上传文件映射到绝对路径.md
@@ -2,12 +2,12 @@
 比如访问：http://127.0.0.1:8080/upload/2018/9/18/1.jpg时，我想访问d:/fupload/2018/9/18/1.jpg这个文件
 
 > 作用效果等价于
-```
+```xml
 <mvc:resources mapping="/js/**" location="/js/"/>
 ```
 
 > 需要通过适配器来映射
-```
+```java
 //在src/main/java下面新建一个类
 package com.custom.adapter;
 
@@ -28,7 +28,7 @@ public class WebAppConfig extends WebMvcConfigurerAdapter {
 
 }
 
-```
+```groovy
 > 然后在Application.groovy上面指定扫描位置
 ```
 package grails.cros
