--- a/grails/fileupload/上传文件映射到绝对路径（二）.md
+++ b/grails/fileupload/上传文件映射到绝对路径（二）.md
@@ -1,17 +1,17 @@
 > 作用效果等价于
-```
+```xml
 <mvc:resources mapping="/js/**" location="/js/"/>
 ```
 > application.yml配置
-```
+```yaml
 ---
 grails:
     resources:
         pattern: /**
 ```
 
-> grails-app/conf/spring/resources.groovy下面
-```
+> `grails-app/conf/spring/resources.groovy`下面
+```groovy
 import org.springframework.web.servlet.handler.SimpleUrlHandlerMapping
 import org.springframework.web.servlet.mvc.HttpRequestHandlerAdapter
 import org.springframework.web.servlet.resource.ResourceHttpRequestHandler
@@ -32,5 +32,5 @@ beans = {
 ```
 
 > 注意
-* 这样配置后webapp下面的文件不能访问
+* 这样配置后`webapp`下面的文件不能访问
 * 配置中的斜杠不能少
