--- a/grails/fileupload/文件上传.md
+++ b/grails/fileupload/文件上传.md
@@ -1,10 +1,10 @@
 创建项目，然后在build.gradle中引入：
-```
+```bash
 compile group: 'commons-fileupload', name: 'commons-fileupload', version: '1.3.3'
 compile group: 'commons-io', name: 'commons-io', version: '2.5'
 ```
 创建一个名为FileResource的域类（domain）,用来保存文件信息
-```
+```groovy
 package com.system
 
 /**
@@ -51,7 +51,7 @@ class FileResource {
 }
 ```
 创建UploadController类
-```
+```groovy
 package com.system
 
 import grails.converters.JSON
@@ -105,8 +105,8 @@ class UploadController {
     }
 }
 ```
-我这里文件上传插件用的layui2.0的，请到layui官网：http://www.layui.com/ 自行下载，也可以用其他上传插件 下载后，复制里面的layui到grails-app/assets/javascripts下面,目录结构如下：
-```
+我这里文件上传插件用的`layui2.0`的，请到`layui`官网：http://www.layui.com/ 自行下载，也可以用其他上传插件 下载后，复制里面的layui到grails-app/assets/javascripts下面,目录结构如下：
+```bash
 ├─grails-app
 │  ├─assets
 │  │  ├─images
@@ -127,7 +127,7 @@ class UploadController {
 │  │  └─stylesheets
 ```
 在grails-app/views下面创建upload/index.gsp,页面内容：
-```
+```html
 <!DOCTYPE html>
 <html>
 <head>
@@ -164,8 +164,8 @@ class UploadController {
 </body>
 </html>
 ```
-在grails-app/conf/application.yml最后面配置grails文件上传限制大小（200M）：
-```
+在`grails-app/conf/application.yml`最后面配置`grails`文件上传限制大小（200M）：
+```yaml
 ---
 grails:
     controllers:
@@ -183,8 +183,8 @@ grails:
 
 注意事项：
 ```
-1、如果不配置文件上传大小限制，默认限制大小为128kb，超过就会报错
-2、页面引入js和css方式最好用：
+1、如果不配置文件上传大小限制，默认限制大小为`128kb`，超过就会报错
+2、页面引入`js`和`css`方式最好用：
     <asset:stylesheet href="xxx.css"/>
     <asset:stylesheet src="xxx.js"/>
 且一般css放head里面，js放</body>前面
