--- a/grails/fileupload/文件上传.md
+++ b/grails/fileupload/文件上传.md
@@ -181,11 +181,11 @@ grails:
 ```
 到此配置已经ok，启动项目，访问：http://localhost:8080/upload/index 进行测试
 
-注意事项：
-```
+# 注意事项：
+
 1、如果不配置文件上传大小限制，默认限制大小为`128kb`，超过就会报错
 2、页面引入`js`和`css`方式最好用：
     <asset:stylesheet href="xxx.css"/>
     <asset:stylesheet src="xxx.js"/>
 且一般css放head里面，js放</body>前面
-```
+
