--- a/grails/fileupload/文件上传.md
+++ b/grails/fileupload/文件上传.md
@@ -185,7 +185,7 @@ grails:
 
 * 如果不配置文件上传大小限制，默认限制大小为`128kb`，超过就会报错
 * 页面引入`js`和`css`方式最好用：
-    <asset:stylesheet href="xxx.css"/>
-    <asset:stylesheet src="xxx.js"/>
+`<asset:stylesheet href="xxx.css"/>`
+`<asset:stylesheet src="xxx.js"/>`
 * 一般css放head里面，js放</body>前面
 
