--- a/jdk/jdk8/函数式接口.md
+++ b/jdk/jdk8/函数式接口.md
@@ -13,3 +13,14 @@ uuidGenerator.get()
 
 ```
 
+## 列表
+
+
+|name	|type	|description|
+|--|--|
+|Consumer	|Consumer< T >	|接收T对象，不返回值|
+|Predicate	|Predicate< T >|	接收T对象并返回boolean|
+|Function	|Function< T, R >	|接收T对象，返回R对象|
+|Supplier	|Supplier< T >	|提供T对象（例如工厂），不接收值|
+|UnaryOperator|	UnaryOperator	|接收T对象，返回T对象|
+|BinaryOperator	|BinaryOperator	|接收两个T对象，返回T对象|
