--- a/grails/path/文件路径获取.md
+++ b/grails/path/文件路径获取.md
@@ -1,7 +1,14 @@
+> 获取项目名
+```groovy
+servletContext.contextPath
+```
+
 > 获取项目根路径
 
 ```groovy
 servletContext.getRealPath("/")
+
+// D:\work\base\src\main\webapp
 ```
 
 > 后台获取assets目录下图片访问路径(一)
