--- a/grails/path/文件路径获取.md
+++ b/grails/path/文件路径获取.md
@@ -17,8 +17,8 @@ servletContext.getRealPath("/")
 render g.resource(dir: 'images', file: 'image1.jpg', absolute: true)
 
 // {base} - 项目名
-// 相对路径/{base}/images/image1.jpg
-// 绝对路径http://localhost:8080/{base}/images/image1.jpg
+// 相对路径 - /{base}/images/image1.jpg
+// 绝对路径 - http://localhost:8080/{base}/images/image1.jpg
 ```
 
 > 后台获取assets目录下图片访问路径(二)
