--- a/grails/path/文件路径获取.md
+++ b/grails/path/文件路径获取.md
@@ -6,9 +6,13 @@ servletContext.contextPath
 > 获取项目根路径
 
 ```groovy
+// 第一种
 servletContext.getRealPath("/")
 
-// D:\work\base\src\main\webapp
+// 第二种
+grailsAttributes.getApplicationContext().getResource("/").getFile().getAbsolutePath()
+
+// 结果 D:\work\base\src\main\webapp
 ```
 
 > 后台获取assets目录下图片访问路径(一)
