--- a/grails/path/文件路径获取.md
+++ b/grails/path/文件路径获取.md
@@ -5,7 +5,7 @@ servletContext.contextPath
 
 > 获取项目根路径
 
-```groovy
+```java
 // 第一种
 servletContext.getRealPath("/")
 
@@ -17,7 +17,7 @@ grailsAttributes.getApplicationContext().getResource("/").getFile().getAbsoluteP
 
 > 后台获取assets目录下图片访问路径(一)
 
-```groovy
+```java
 render g.resource(dir: 'images', file: 'image1.jpg', absolute: true)
 
 // {base} - 项目名
@@ -27,6 +27,6 @@ render g.resource(dir: 'images', file: 'image1.jpg', absolute: true)
 
 > 后台获取assets目录下图片访问路径(二)
 
-```groovy
+```java
 render "${assetPath("favicon.ico")}"
 ```
