--- a/grails/path/文件路径获取.md
+++ b/grails/path/文件路径获取.md
@@ -15,6 +15,14 @@ grailsAttributes.getApplicationContext().getResource("/").getFile().getAbsoluteP
 // 结果 D:\work\base\src\main\webapp
 ```
 
+> 获取`grails-app/conf`下的文件
+
+```groovy
+def resource = this.class.classLoader.getResource('application.properties')
+def path = resource.file
+render resource.openStream()
+```
+
 > 后台获取assets目录下图片访问路径(一)
 
 ```java
