--- a/grails/path/文件路径获取.md
+++ b/grails/path/文件路径获取.md
@@ -19,6 +19,8 @@ grailsAttributes.getApplicationContext().getResource("/").getFile().getAbsoluteP
 
 ```groovy
 def resource = this.class.classLoader.getResource('application.properties')
+
+// 绝对路径
 def path = resource.file
 render resource.openStream()
 ```
