--- a/grails/path/文件路径获取.md
+++ b/grails/path/文件路径获取.md
@@ -16,6 +16,7 @@ grailsAttributes.getApplicationContext().getResource("/").getFile().getAbsoluteP
 ```
 
 > 获取`grails-app/conf`下的文件
+* `getResource()`中用相对路径
 
 ```groovy
 def resource = this.class.classLoader.getResource('application.properties')
