--- a/grails/issues/常见问题.md
+++ b/grails/issues/常见问题.md
@@ -1,6 +1,6 @@
 # 常见问题
 
-1. 在**grails-3.2.x**中使用`compile 'org.grails.plugins:spring-security-core:3.2.0.M1'`时报错
+# 1. 在**grails-3.2.x**中使用`compile 'org.grails.plugins:spring-security-core:3.2.0.M1'`时报错
 
 > 错误提示
 
@@ -18,4 +18,4 @@ compile 'org.grails.plugins:spring-security-core:3.1.2'
 
 ## 注意
 * `compile 'org.grails.plugins:spring-security-core:3.1.2'`兼容`3.0.x`,`3.1.x`,`3.2.x`
-* `compile 'org.grails.plugins:spring-security-core:3.2.0'`兼容`3.3.x`或更高版本
+* `compile 'org.grails.plugins:spring-security-core:3.2.0.M1'`兼容`3.3.x`或更高版本
