--- a/grails/issues/常见问题.md
+++ b/grails/issues/常见问题.md
@@ -1,11 +1,14 @@
 # 常见问题
 
-# 1. 在**grails-3.2.x**中使用`compile 'org.grails.plugins:spring-security-core:3.2.0.M1'`时报错
+1. 在**grails-3.2.x**中使用`compile 'org.grails.plugins:spring-security-core:3.2.0.M1'`时报错
 
 > 错误提示
 
 ```
-org.springframework.beans.factory.BeanCreationException: Error creating bean with name 'grailsApplicationPostProcessor' defined in shangtu.Application: Bean instantiation via factory method failed; nested exception is org.springframework.beans.BeanInstantiationException: Failed to instantiate [grails.boot.config.GrailsApplicationPostProcessor]: Factory method 'grailsApplicationPostProcessor' threw exception; nested exception is grails.plugins.exceptions.PluginException: Failed to initialize class [grails.plugin.springsecurity.LoginController] from plugin [springSecurityCore] : org/grails/compiler/web/converters/RenderConverterTrait
+org.springframework.beans.factory.BeanCreationException: Error creating bean with name 'grailsApplicationPostProcessor' 
+defined in shangtu.Application: Bean instantiation via factory method failed; 
+nested exception is org.springframework.beans.BeanInstantiationException: Failed to instantiate [grails.boot.config.GrailsApplicationPostProcessor]: Factory method 'grailsApplicationPostProcessor' threw exception; 
+nested exception is grails.plugins.exceptions.PluginException: Failed to initialize class [grails.plugin.springsecurity.LoginController] from plugin [springSecurityCore] : org/grails/compiler/web/converters/RenderConverterTrait
 ```
 
 > 解决方法
