--- a/grails/scripts/在脚本中获取上下文.md
+++ b/grails/scripts/在脚本中获取上下文.md
@@ -15,3 +15,10 @@ def hogeService = ctx.getBean("hogeService")
 
 def obj = new HogeBatch(hogeService)
 ```
+
+# 脚本
+
+```groovy
+def shell = new GroovyShell(classLoader, new Binding(ctx: appCtx, grailsApplication: grailsApp))
+shell.evaluate script.getText('UTF-8')
+```
