--- a/grails/spring security/验证原密码是否一致.md
+++ b/grails/spring security/验证原密码是否一致.md
@@ -1,4 +1,4 @@
-```
+```groovy
 //通过springSecurityService验证密码
 def flag = springSecurityService.passwordEncoder.isPasswordValid(springSecurityService?.currentUser?.password,"admin",null)
 ```
