--- a/grails/spring security/单一用户登录.md
+++ b/grails/spring security/单一用户登录.md
@@ -13,7 +13,7 @@ sessions.each {
 
 * `onAuthentication`
 
-```
+```groovy
 // injected dependencies 
 AuthenticationManager authenticationManager 
 SessionAuthenticationStrategy sessionAuthenticationStrategy 
