--- a/Java基础/基础搜集.md
+++ b/Java基础/基础搜集.md
@@ -10,3 +10,10 @@
   * Spring还支持通过XML或者注解的声明式事务. 这种方式符合非侵入式的概念, 也是Spring推荐的方式
   
 * Hibernate中的SessionFactory: 是用来创建Session的工厂, 本身是线程安全的
+
+* HTTP Code意义
+  * "1" 开头的代表的是消息
+  * "2" 开头的代表是成功
+  * "3" 开头的代表是重定向信息
+  * "4" 开头代表请求错误
+  * "5" 开头代表服务器错误
