--- a/Java基础/基础搜集.md
+++ b/Java基础/基础搜集.md
@@ -18,4 +18,4 @@
   * "4" 开头代表请求错误
   * "5" 开头代表服务器错误
 
-* 默认情况下Filter与Interceptor都是在项目启动的时候实例化, 然后常驻内存.在项目关闭的时候才会被销毁
+* 默认情况下Filter与Interceptor都是在项目启动的时候实例化, 然后常驻内存.在项目关闭的时候才会被销毁，都是单例模式. 单例模式优点在于性能好. 例如在JEE的项目中. Filter、Interceptor、Listener、Controller、Service、Dao都应该设置为单例模式. 这也是为什么Spring MVC的性能好于Struts的原因. 其中很重要的一点就是Struts的Action是多例的
