--- a/grails/controller/常用.md
+++ b/grails/controller/常用.md
@@ -9,6 +9,15 @@ params['id']
 
 ```
 
+* 参数绑定
+
+```groovy
+def bindAction = {
+   bindData(owner, params)
+   assert url == new java.net.URL('http://grails.org')
+}
+```
+
 * 内置对象
 
 ```groovy
@@ -19,6 +28,14 @@ session.setAttribute("myAttribute", "myValue") ; session.myAttribute = "myValue"
 servletContext.getAttribute("myAttribute") ; servletContext.myAttribute
 servletContext.setAttribute("myAttribute", "myValue") ;
 servletContext.myAttribute = "myValue"
+
+application
+flash
+out
+params
+request
+response
+session
 ```
 
 * 常用方法
@@ -37,3 +54,90 @@ redirect(url:'http://grails.org')
 redirect(action:'list', params:[ max: 20, sort: 'url'])
 ```
 
+* 转发
+
+```groovy
+def save = {
+  def b = new Bookmark(params)
+  if(b.save()) {
+    redirect( action:show, id: b.id )
+  } else {
+    chain(action:create,model: [ bookmark:b ] )
+  }
+}
+```
+
+* 输出`zip`文件
+
+```groovy
+def createZip = {
+   byte[] zip = ... // create the zip from some source
+   response.contentType = "application/octet-stream"
+   response.outputStream << zip
+}
+```
+
+## render用法
+
+```groovy
+// 输出字符
+render "Hello World it's ${new Date()}!"
+
+// xml
+render(text:"<hello>world</hello>", contentType:"text/xml")
+
+// 返回页面
+render(view:"myView")
+
+// 返回页面并返回数据
+render(view:"myView",model: [ today:new Date() ] )
+
+// 返回绝对路径下面的页面
+render(view: "/mySharedView")
+
+// 返回html页面
+render {
+   html {
+     head {
+        title("Example Mark-up")
+     }
+     body {
+        p("This is a single paragraph of mark-up!" )
+     }
+   }
+}
+```
+
+## 获取文件
+
+```groovy
+def upload = {
+  def file = request.getFile('myFile')
+}
+```
+
+* 文件接口方法
+
+```groovy
+interface MultipartFile {
+   public byte[] getBytes();
+   public String getContentType();
+   public java.io.InputStream getInputStream();
+   public String getName();
+   public String getOriginalFilename();
+   public long getSize();
+   public boolean isEmpty();
+   public void transferTo(java.io.File dest);
+}
+
+* 上传方法
+
+```groovy
+def upload = {
+   def file = request.getFile('myFile')
+   if(file && !file.empty && file.size < 1024) {
+      file.transferTo( new java.io.File( "/local/server/path/${file.name}" ) )
+   }
+}
+```
+```
