--- a/Java基础/面试收集.md
+++ b/Java基础/面试收集.md
@@ -31,7 +31,7 @@
 * 缩小检索范围，如in查询替换为exists、分页，查询指定列名
 * 创建索引
 
-3. redis除了作为缓存还有哪些用途
+#### 3. redis除了作为缓存还有哪些用途
 * 投票系统，用户登录session，购物车，网页缓存，日志系统，搜索引擎，消息队列。
 * 分布式锁
 * 计数应用
