--- a/Java基础/面试收集.md
+++ b/Java基础/面试收集.md
@@ -30,6 +30,10 @@
 
 * 缩小检索范围，如in查询替换为exists、分页，查询指定列名
 * 创建索引
+* 使用like索引生效的例子（后模糊匹配）
+  * like %keyword    索引失效，使用全表扫描。但可以通过翻转函数+like前模糊查询+建立翻转函数索引=走翻转函数索引，不走全表扫描。 
+  * like keyword%    索引有效。 
+  * like %keyword% 索引失效，也无法使用反向索引。 
 
 #### 3. redis除了作为缓存还有哪些用途
 * 投票系统，用户登录session，购物车，网页缓存，日志系统，搜索引擎，消息队列。
