--- a/grails/concurrent/并发.md
+++ b/grails/concurrent/并发.md
@@ -19,3 +19,23 @@ def user = User.lock(1)
 user.username = "张三"
 user.save(flush: true)
 ```
+
+## 同步代码块
+
+```groovy
+def update() {
+    synchronized (SiteInfoService.class) {
+        SiteInfo site = SiteInfo.all.find {
+            it.id > 0
+        }
+        if (site) {
+            SiteInfo.withNewTransaction {
+                site.pvCount += 1
+                site.save(flush: true)
+            }
+            return site
+        }
+    }
+    return null
+}
+```
