--- a/grails/concurrent/并发.md
+++ b/grails/concurrent/并发.md
@@ -39,3 +39,14 @@ def update() {
     return null
 }
 ```
+
+#### 自定义事务级别
+
+```groovy
+// the keys in the Map must correspond to properties
+// of org.springframework.transaction.support.DefaultTransactionDefinition
+Account.withTransaction([propagationBehavior: TransactionDefinition.PROPAGATION_REQUIRES_NEW,
+                         isolationLevel: TransactionDefinition.ISOLATION_REPEATABLE_READ]) {
+    // …
+}
+```
