--- a/grails/batch/批量操作.md
+++ b/grails/batch/批量操作.md
@@ -64,6 +64,12 @@ personList.each { Person person ->
 Persion.where {
     department == department
 }.updateAll([enable: false])
+
+// 将字符串1,2,3转为集合[1,2,3]，再转为[1L,2L,3L]
+def ids = params.ids.split(",").toList() as Long[]
+def count = Message.where {
+    'in'("id", ids)
+}.updateAll(status: 2)
 ```
 
 [参考地址](http://krixisolutions.com/bulk-insert-grails-gorm/)
