--- a/grails/reflect/常用操作.md
+++ b/grails/reflect/常用操作.md
@@ -4,4 +4,6 @@
 def bookClass = grailsApplication.classLoader.loadClass("Book")
 
 input = servletContext.getResourceAsStream("/WEB-INF/myscript.groovy")
+
+def appKey = grailsApplication.config.getProperty('app.key')
 ```
