--- a/grails/controller/访问地址前缀.md
+++ b/grails/controller/访问地址前缀.md
@@ -15,7 +15,17 @@ class UrlMappings {
         put "/$controller/$id(.$format)?"(action:"update")
         patch "/$controller/$id(.$format)?"(action:"patch")
       }
+      
+      get "/books"(controller:"book", action:"index")
+      get "/books/create"(controller:"book", action:"create")
+      post "/books"(controller:"book", action:"save")
+      get "/books/$id"(controller:"book", action:"show")
+      get "/books/$id/edit"(controller:"book", action:"edit")
+      put "/books/$id"(controller:"book", action:"update")
+      delete "/books/$id"(controller:"book", action:"delete")
         ...
     }
 }
 ```
+
+* [参考](http://docs.grails.org/latest/guide/theWebLayer.html)
