--- a/redis/常用命令.md
+++ b/redis/常用命令.md
@@ -6,19 +6,25 @@
 redis-cli
 ```
 
+* 防止中文乱码连接方式
+
+```bash
+redis-cli --raw 
+```
+
 * 登录认证
 
 ```bash
 auth 123456
 ```
 
-* 查看key总量
+* 查看所有key总量
 
 ```bash
 dbsize
 ```
 
-* 查看key值
+* 查看所有key值
 
 ```bash
 keys *
@@ -41,4 +47,5 @@ get key
 ```bash
 flushdb
 ```
+
 
