--- a/grails/controller/对象赋值.md
+++ b/grails/controller/对象赋值.md
@@ -22,3 +22,15 @@ user.properties['firstName','lastName'] = params
 def user new User()
 bindData(user,params,[exclude: 'dateOfBirth'])
 ```
+
+* 服务类实现`implements grails.web.databinding.DataBinder`类也可以使用`bindData`方法
+
+```groovy
+class UserService implements grails.web.databinding.DataBinder {
+    
+    def save(params) {
+        def user = new User()
+        bindData(user, params, [exclude: 'dateOfBirth'])
+    }
+}
+```
