--- a/grails/email/发送邮件功能.md
+++ b/grails/email/发送邮件功能.md
@@ -5,7 +5,7 @@ compile 'org.grails.plugins:mail:2.0.0.RC6'
 //or compile 'org.grails.plugins:mail:2.0.0'
 ```
 
-* 在grails-app/conf/application.yml最后面加入邮件配置：
+* 在`grails-app/conf/application.yml`最后面加入邮件配置：
 ```yaml
     ---
     grails:
