--- a/grails/email/动态发件人.md
+++ b/grails/email/动态发件人.md
@@ -12,7 +12,7 @@ def send() {
     mailSender.setHost("smtp.qq.com")
     mailSender.setPort(465)
     mailSender.setUsername("2268999743@qq.com")
-    mailSender.setPassword("axyeidaseqyudidb")
+    mailSender.setPassword("abc")
     mailSender.setJavaMailProperties(new Properties() {
         {
             put("mail.smtp.auth", "true")
