--- a/grails/email/动态发件人.md
+++ b/grails/email/动态发件人.md
@@ -33,3 +33,5 @@ def send() {
 
 ## 注意！！！
 * 此方法虽然能动态配置发件人，但是并不能保证线程安全，请悉知！
+* 附件中文名乱码问题解决方案
+    * `javax.mail.internet.MimeUtility.encodeText(fileName, null, "B")`
