--- a/regex/贪婪模式与非贪婪模式.md
+++ b/regex/贪婪模式与非贪婪模式.md
@@ -5,6 +5,6 @@ var str = "[中国]北京，[中关村]小字";
 // 贪婪匹配（最大匹配），输出：小字
 str.replace(/^\[.*\]/g, "")
 
-// 非贪婪匹配（最小匹配）
+// 非贪婪匹配（最小匹配），输出：北京，小字
 str.replace(/\[.*?\]/g, "")
 ```
