--- a/ireport/基本代码.md
+++ b/ireport/基本代码.md
@@ -441,3 +441,40 @@ class ExpeortReportService {
 }
 
 ```
+
+
+### 生成excel到本地
+
+```java
+ Map<String, Object> parametro = new HashMap<String, Object>();
+parametro.put("USUARIO", UConstante.NAME_MINISTERIO_USER);
+parametro.put("RUTA_LOGO", PuenteFile.getRutaFiles(FacesContext.getCurrentInstance(), PuenteFile.RUTA_IMG_LOGO));
+parametro.put("PATH_SYSTEM", rutaFileSystemHD);
+parametro.put("WHERE_DATA", WHERE_REGISTRO);
+parametro.put("WHERE_PROYECTO_USUARIO", WHERE_PROYECTO_USUARIO);
+parametro.put("WHERE_ZONA", WHERE_ZONA);
+parametro.put("NAME_APP", RutaFile.NAME_APP);
+parametro.put("ID_USUARIO", getUsuario().getId());
+parametro.put("ID_PROYECTO", beanProyecto.getId());
+parametro.put("SUBREPORT_DIR", SUBREPORT_DIR);
+
+System.out.println(">>>>>> PARAMETROS :" + parametro.toString());
+
+try {
+    JasperPrint jasperPrint = JasperFillManager.fillReport(path, parametro, PgConnector.getConexion());
+    JRXlsExporter xlsExporter = new JRXlsExporter();
+    xlsExporter.setExporterInput(new SimpleExporterInput(jasperPrint));
+    xlsExporter.setExporterOutput(new SimpleOutputStreamExporterOutput(PATH_REPORT_FILE + nameExcel);
+    SimpleXlsReportConfiguration xlsReportConfiguration = new SimpleXlsReportConfiguration();
+    SimpleXlsExporterConfiguration xlsExporterConfiguration = new SimpleXlsExporterConfiguration();
+    xlsReportConfiguration.setOnePagePerSheet(true);
+    xlsReportConfiguration.setRemoveEmptySpaceBetweenRows(false);
+    xlsReportConfiguration.setDetectCellType(true);
+    xlsReportConfiguration.setWhitePageBackground(false);
+    xlsExporter.setConfiguration(xlsReportConfiguration);
+    xlsExporter.exportReport();
+
+} catch (Exception ex) {
+    ex.printStackTrace();
+}
+```
