--- a/Java基础/基础搜集.md
+++ b/Java基础/基础搜集.md
@@ -1,5 +1,5 @@
 * 在Spring框架中,面向方面编程(AOP)的目标在于:将程序中涉及的公用问题集中解决
-* 工厂模式、单态模式、反射机制、代理模式的作用
+* 工厂模式、单例模式、反射机制、代理模式的作用
   * 工厂模式用来解决对象的创建类型问题.
   * 单例模式用来解决创建的对象数量问题
   * 反射就是在运行时获取当前运行的类或者对象的信息
