--- a/grails/v2/依赖无法下载.md
+++ b/grails/v2/依赖无法下载.md
@@ -10,3 +10,19 @@ mavenRepo "https://repo.grails.org/grails/plugins"
 mavenRepo "http://download.java.net/maven/2/"
 mavenRepo "http://repository.jboss.com/maven2/"
 ```
+
+
+> 或者
+
+```
+repositories {
+    inherits true
+
+    grailsPlugins()
+    grailsHome()
+    grailsCentral()
+    mavenLocal()
+    mavenCentral()
+    grailsRepo "https://grails.org/plugins" 
+}
+```
