--- a/jdk/jdk8/求和、总数、均值等.md
+++ b/jdk/jdk8/求和、总数、均值等.md
@@ -70,3 +70,13 @@ public class Demo {
     }
 }
 ```
+
+## BigDecimal求和
+
+```java
+double[] ds = {1, 2, -1, 0.000001};
+BigDecimal reduce = Arrays.stream(ds).mapToObj(BigDecimal::valueOf).reduce(BigDecimal.ZERO, BigDecimal::add);
+System.out.println(reduce);
+
+//result:2.0000010
+```
