--- a/centos/宝塔linux/安装位置.md
+++ b/centos/宝塔linux/安装位置.md
@@ -4,25 +4,25 @@
 
   Centos安装脚本
 
-```
+```shell
 yum install -y wget && wget -O install.sh http://download.bt.cn/install/install.sh && sh install.sh
 ```
 
 Ubuntu/Deepin安装脚本
 
-```
+```shell
 wget -O install.sh http://download.bt.cn/install/install-ubuntu.sh && sudo bash install.sh
 ```
 
 Debian安装脚本
 
-```
+```shell
 wget -O install.sh http://download.bt.cn/install/install-ubuntu.sh && bash install.sh
 ```
 
 Fedora安装脚本
 
-```
+```shell
 wget -O install.sh http://download.bt.cn/install/install.sh && bash install.sh
 ```
 
@@ -30,37 +30,37 @@ wget -O install.sh http://download.bt.cn/install/install.sh && bash install.sh
 
   停止
 
-```
+```shell
 /etc/init.d/bt stop
 ```
 
 启动
 
-```
+```shell
 /etc/init.d/bt start
 ```
 
 重启
 
-```
+```shell
 /etc/init.d/bt restart
 ```
 
 卸载
 
-```
+```shell
 /etc/init.d/bt stop && chkconfig --del bt && rm -f /etc/init.d/bt && rm -rf /www/server/panel
 ```
 
 查看当前面板端口
 
-```
+```shell
 cat /www/server/panel/data/port.pl
 ```
 
 修改面板端口，如要改成8881（centos 6 系统）
 
-```
+```shell
 echo '8881' > /www/server/panel/data/port.pl && /etc/init.d/bt restart
 iptables -I INPUT -p tcp -m state --state NEW -m tcp --dport 8881 -j ACCEPT
 service iptables save
@@ -69,7 +69,7 @@ service iptables restart
 
 修改面板端口，如要改成8881（centos 7 系统）
 
-```
+```shell
 echo '8881' > /www/server/panel/data/port.pl && /etc/init.d/bt restart
 firewall-cmd --permanent --zone=public --add-port=8881/tcp
 firewall-cmd --reload
@@ -77,115 +77,115 @@ firewall-cmd --reload
 
 强制修改MySQL管理(root)密码，如要改成123456
 
-```
+```shell
 cd /www/server/panel && python tools.py root 123456
 ```
 
 修改面板密码，如要改成123456
 
-```
+```shell
 cd /www/server/panel && python tools.py panel 123456
 ```
 
 查看宝塔日志
 
-```
+```shell
 cat /tmp/panelBoot.pl
 ```
 
 查看软件安装日志
 
-```
+```shell
 cat /tmp/panelExec.log
 ```
 
 站点配置文件位置
 
-```
+```shell
 /www/server/panel/vhost
 ```
 
 删除域名绑定面板
 
-```
+```shell
 rm -f /www/server/panel/data/domain.conf
 ```
 
 清理登陆限制
 
-```
+```shell
 rm -f /www/server/panel/data/*.login
 ```
 
 查看面板授权IP
 
-```
+```shell
 cat /www/server/panel/data/limitip.conf
 ```
 
 关闭访问限制
 
-```
+```shell
 rm -f /www/server/panel/data/limitip.conf
 ```
 
 查看许可域名
 
-```
+```shell
 cat /www/server/panel/data/domain.conf
 ```
 
 关闭面板SSL
 
-```
+```shell
 rm -f /www/server/panel/data/ssl.pl && /etc/init.d/bt restart
 ```
 
 查看面板错误日志
 
-```
+```shell
 cat /tmp/panelBoot
 ```
 
 查看数据库错误日志
 
-```
+```shell
 cat /www/server/data/*.err
 ```
 
 站点配置文件目录(nginx)
 
-```
+```shell
 /www/server/panel/vhost/nginx
 ```
 
 站点配置文件目录(apache)
 
-```
+```shell
 /www/server/panel/vhost/apache
 ```
 
 站点默认目录
 
-```
+```shell
 /www/wwwroot
 ```
 
 数据库备份目录
 
-```
+```shell
 /www/backup/database
 ```
 
 站点备份目录
 
-```
+```shell
 /www/backup/site
 ```
 
 站点日志
 
-```
+```shell
 /www/wwwlogs
 ```
 
@@ -193,37 +193,37 @@ cat /www/server/data/*.err
 
   nginx安装目录
 
-```
+```shell
 /www/server/nginx
 ```
 
 启动
 
-```
+```shell
 /etc/init.d/nginx start
 ```
 
 停止
 
-```
+```shell
 /etc/init.d/nginx stop
 ```
 
 重启
 
-```
+```shell
 /etc/init.d/nginx restart
 ```
 
 启载
 
-```
+```shell
 /etc/init.d/nginx reload
 ```
 
 nginx配置文件
 
-```
+```shell
 /www/server/nginx/conf/nginx.conf
 ```
 
@@ -231,37 +231,37 @@ nginx配置文件
 
   apache安装目录
 
-```
+```shell
 /www/server/httpd
 ```
 
 启动
 
-```
+```shell
 /etc/init.d/httpd start
 ```
 
 停止
 
-```
+```shell
 /etc/init.d/httpd stop
 ```
 
 重启
 
-```
+```shell
 /etc/init.d/httpd restart
 ```
 
 启载
 
-```
+```shell
 /etc/init.d/httpd reload
 ```
 
 apache配置文件
 
-```
+```shell
 /www/server/apache/conf/httpd.conf
 ```
 
@@ -269,49 +269,49 @@ apache配置文件
 
   mysql安装目录
 
-```
+```shell
 /www/server/mysql
 ```
 
 phpmyadmin安装目录
 
-```
+```shell
 /www/server/phpmyadmin
 ```
 
 数据存储目录
 
-```
+```shell
 /www/server/data
 ```
 
 启动
 
-```
+```shell
 /etc/init.d/mysqld start
 ```
 
 停止
 
-```
+```shell
 /etc/init.d/mysqld stop
 ```
 
 重启
 
-```
+```shell
 /etc/init.d/mysqld restart
 ```
 
 启载
 
-```
+```shell
 /etc/init.d/mysqld reload
 ```
 
 mysql配置文件
 
-```
+```shell
 /etc/my.cnf
 ```
 
@@ -319,31 +319,31 @@ mysql配置文件
 
   ftp安装目录
 
-```
+```shell
 /www/server/pure-ftpd
 ```
 
 启动
 
-```
+```shell
 /etc/init.d/pure-ftpd start
 ```
 
 停止
 
-```
+```shell
 /etc/init.d/pure-ftpd stop
 ```
 
 重启
 
-```
+```shell
 /etc/init.d/pure-ftpd restart
 ```
 
 ftp配置文件
 
-```
+```shell
 /www/server/pure-ftpd/etc/pure-ftpd.conf
 ```
 
@@ -351,37 +351,37 @@ ftp配置文件
 
 * php安装目录
 
-```
+```shell
 /www/server/php
 ```
 
 启动(请根据安装PHP版本号做更改，例如：/etc/init.d/php-fpm-54 start)
 
-```
+```shell
 /etc/init.d/php-fpm-{52|53|54|55|56|70|71} start
 ```
 
 停止(请根据安装PHP版本号做更改，例如：/etc/init.d/php-fpm-54 stop)
 
-```
+```shell
 /etc/init.d/php-fpm-{52|53|54|55|56|70|71} stop
 ```
 
 重启(请根据安装PHP版本号做更改，例如：/etc/init.d/php-fpm-54 restart)
 
-```
+```shell
 /etc/init.d/php-fpm-{52|53|54|55|56|70|71} restart
 ```
 
 启载(请根据安装PHP版本号做更改，例如：/etc/init.d/php-fpm-54 reload)
 
-```
+```shell
 /etc/init.d/php-fpm-{52|53|54|55|56|70|71} reload
 ```
 
 配置文件(请根据安装PHP版本号做更改，例如：/www/server/php/52/etc/php.ini)
 
-```
+```shell
 /www/server/php/{52|53|54|55|56|70|71}/etc/php.ini
 ```
 
@@ -389,25 +389,25 @@ ftp配置文件
 
   redis安装目录
 
-```
+```shell
 /www/server/redis
 ```
 
 启动
 
-```
+```shell
 /etc/init.d/redis start
 ```
 
 停止
 
-```
+```shell
 /etc/init.d/redis stop
 ```
 
 redis配置文件
 
-```
+```shell
 /www/server/redis/redis.conf
 ```
 
@@ -415,31 +415,31 @@ redis配置文件
 
   `memcached`安装目录
 
-```
+```shell
 /usr/local/memcached
 ```
 
 启动
 
-```
+```shell
 /etc/init.d/memcached start
 ```
 
 停止
 
-```
+```shell
 /etc/init.d/memcached stop
 ```
 
 重启
 
-```
+```shell
 /etc/init.d/memcached restart
 ```
 
 启载
 
-```
+```shell
 /etc/init.d/memcached reload
 ```
 
@@ -447,7 +447,7 @@ redis配置文件
 
 # redis启动
 
-```bash
+```shell
 #进入宝塔安装的redis目录
 cd /www/server/redis/
 
