--- a/jdk/jdk8/树形递归.md
+++ b/jdk/jdk8/树形递归.md
@@ -26,6 +26,8 @@
      */
     private List<PermissionTreeVO> getChildPermissionList(String bid, List<PermissionTreeVO> childrenNodes) {
         List<PermissionTreeVO> list = childrenNodes.stream().filter(parent ->
+			// 防止两个同时为空，导致死循环
+			StringUtils.hasText(parent.getParentBid()) &&
             // 筛选出下一节点元素
             Objects.equals(bid, parent.getParentBid())).map(child -> {
                 // 设置子节点
