--- a/maven/依赖.md
+++ b/maven/依赖.md
@@ -9,3 +9,12 @@
     <version>1.21</version>
 </dependency>
 ```
+
+
+
+* 分析哪些依赖`被使用`和`没使用`
+
+```shell
+mvn dependency:analyze -DignoreNonCompile
+```
+
