--- a/jdk/jdk8/求和、总数、均值等.md
+++ b/jdk/jdk8/求和、总数、均值等.md
@@ -80,3 +80,36 @@ System.out.println(reduce);
 
 //result:2.0000010
 ```
+
+## 分组聚合
+
+```java
+Student s1 = new Student().setStuName("小张").setAge(20).setSex('男');
+Student s2 = new Student().setStuName("小丽").setAge(21).setSex('女');
+Student s3 = new Student().setStuName("小王").setAge(18).setSex('男');
+Student s4 = new Student().setStuName("小风").setAge(19).setSex('男');
+List<Student> students = Arrays.asList(s1, s2, s3, s4);
+
+// 按性别分组求18岁以上的人数
+Map<Character, Long> stuMap = students.stream().filter(stu -> stu.getAge() > 18)
+	.collect(Collectors.groupingBy(Student::getSex, Collectors.counting()));
+System.out.println(stuMap); // {女=1, 男=2}
+
+// 按性别分组列出18岁以上的学生年龄
+Map<Character, List<Integer>> listMap = students.stream().filter(stu -> stu.getAge() > 18)
+	.collect(Collectors
+		.groupingBy(Student::getSex, Collectors.mapping(Student::getAge, Collectors.toList())));
+System.out.println(listMap); // {女=[21], 男=[20, 19]}
+
+// 按性别转map，key如果重复就用后面的值覆盖前面的值
+Map<Character, Integer> sexMap = students.stream().filter(stu -> stu.getAge() > 18)
+	.collect(Collectors.toMap(Student::getSex, Student::getAge, (sex, age) -> sex));
+System.out.println(sexMap); // {女=21, 男=20}
+
+// 按性别转map，age作为key, sex作为value
+LinkedHashMap<Integer, Character> allSexMap = students.stream().filter(stu -> stu.getAge() > 18)
+	.sorted(Comparator.comparing(Student::getAge).reversed())
+	.collect(Collectors.toMap(Student::getAge, Student::getSex, (age, sex) -> sex,
+		LinkedHashMap::new));
+System.out.println(allSexMap); // {21=女, 20=男, 19=男}
+```
