平均分配算法

--- a/Java基础/算法题目.md
+++ b/Java基础/算法题目.md
@@ -18,3 +18,48 @@ public static void main(String[] args) {
 // 输出i = 119 
 
 ```
+
+* 平均分配算法（将若干数据平均分配给若干用户）
+
+```java
+List<String> dataList = new ArrayList<>();
+Stream.iterate(1, i -> i + 1).limit(3).forEach(i -> {
+  dataList.add("data_" + i);
+});
+
+List<String> userList = new ArrayList<>();
+Stream.iterate(1, i -> i + 1).limit(200).forEach(i -> {
+  userList.add("user" + i);
+});
+
+// 队列最大容量，每个人最多分配5条数据
+int allotListHaxCapacity = Math.min(dataList.size(), userList.size() * 5);
+// 分配队列
+List<String> allotList = new ArrayList<>(allotListHaxCapacity);
+
+// 填充分配
+for (int i = 0; i < allotListHaxCapacity; ) {
+  for (String s : userList) {
+	if (i >= allotListHaxCapacity) {
+	  i++;
+	  break;
+	}
+	allotList.add(s);
+	i++;
+  }
+}
+
+Map<String, List<String>> allotMap = new HashMap<>();
+
+// 给用户分配数据
+for (int i = 0; i < dataList.size(); i++) {
+  if (i >= allotList.size()) {
+	break;
+  }
+  String user = allotList.get(i);
+  List<String> data = allotMap.computeIfAbsent(user, k -> new ArrayList<>());
+  data.add(dataList.get(i));
+}
+
+System.out.println(allotMap);
+```
