--- a/loadbalance/负载组件.md
+++ b/loadbalance/负载组件.md
@@ -104,3 +104,11 @@
 * dnsmasq
 * ab
 * chproxy(clickhouse负载)
+* slb
+* lifekeep
+
+
+
+# Nginx+Keepalive高可用
+
+![在这里插入图片描述](https://img-blog.csdnimg.cn/20210222205307767.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3FxMzI5MzM0MzI=,size_16,color_FFFFFF,t_70)
