--- a/windows/常用软件.md
+++ b/windows/常用软件.md
@@ -3,3 +3,9 @@
 [1 utools](https://u.tools/)
 
 [Xtreme Download Manager](Xtreme Download Manager) - 嗅探工具
+
+
+
+## 2.proxifier代理软件
+
+> 外网访问内网数据库、web服务等
