--- a/maven/依赖.md
+++ b/maven/依赖.md
@@ -1,5 +1,9 @@
 # 常用依赖
 
+[maven详解](http://devgou.com/article/Apache-Maven/)
+
+[参考1](https://swenfang.github.io/2018/06/03/Maven-Priority/)
+
 * 浏览器信息工具类
 
 ```xml
