--- a/sql/日期函数.md
+++ b/sql/日期函数.md
@@ -171,6 +171,22 @@ to_char(CURRENT_DATE, 'yyyy-mm-dd hh24:mi:ss')
 from dual
 
 
+select 
+ extract(year from systimestamp) year
+,extract(month from systimestamp) month
+,extract(day from systimestamp) day
+,extract(minute from systimestamp) minute
+,extract(second from systimestamp) second
+,extract(timezone_hour from systimestamp) th
+,extract(timezone_minute from systimestamp) tm
+,extract(timezone_region from systimestamp) tr
+,extract(timezone_abbr from systimestamp) ta
+from dual
+
+-- 23
+SELECT extract(DAY FROM date'2021-12-23') FROM dual
+
+
 select
 -- oracle求当年的第几周,从当年的第一个星期一算当年第一周的第一天 
 to_char(CURRENT_TIMESTAMP , 'yyyyiw') as week, 
